# GradeSystem

./: README.md
GradeSystem/: CLion运行说明.txt  CMakeLists.txt  analysis.c  file.c  file.md  main.c  student.h
GradeSystem/GradeSystem/: main.c  student.c  student.h
GradeSystem/exportToHTML/: CLion运行说明.txt.html  CMakeLists.txt.html  GradeSystem.exe.html  analysis.c.html  data.txt.html  file.c.html  index.html  main.c.html  student.c.html  student.h.html
